# Chat-Application

./: .gitignore  README.md
Server/: main.py  (+1 more)
Server-v2/: main.py  pyproject.toml
Server-v2/app/: events.py
Server-v2/app/api/: __init__.py
Server-v2/app/api/routes/: chats.py  messages.py  reset.py  users.py
Server-v2/app/schemas/input/: chats.py
Server-v2/app/schemas/output/: chats.py  messages.py  users.py
Server-v2/config/: logging_config.json
Server-v2/config/database/: tables_config.json
Server-v2/config/database/queries/: chat_members.json  chats.json
Server-v2/data-base/: pyproject.toml
Server-v2/data-base/src/data_base/: __init__.py
Server-v2/data-base/src/data_base/_bootstrap/: database_bootstrapper.py
Server-v2/data-base/src/data_base/_config/: config_bootstrapper.py
Server-v2/data-base/src/data_base/_infrastructure/: base_aiorepository.py  database_wrapper.py
Server-v2/data-base/src/data_base/_services/: database_wrapper.py
Server-v2/data-base/src/data_base/core/: database.py  database_builder.py
Server-v2/file-work/: pyproject.toml
Server-v2/file-work/src/file_work/core/: file_handler.py
Server-v2/log-manager/: README.md  pyproject.toml
Server-v2/log-manager/src/log_manager/: __init__.py
Server-v2/log-manager/src/log_manager/_handlers/: color_handler.py  rotating_size_handler.py  time_rotating_handler.py
Server-v2/log-manager/src/log_manager/_internal/: base_logger.py
Server-v2/log-manager/src/log_manager/_utils/: directory.py
Server-v2/log-manager/src/log_manager/core/: log_manager.py  logger_config.py
(+82 files in other folders)
