[project]
name = "server-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "John Doe",email = "john@doe.com"}
]
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.dependencies]
file-work = { path = "./file-work", develop = true}
log-manager = { path = "./log-manager", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
exclude = ["README.md", "tests/"]

[tool.poetry.scripts]
reinstall-file = "bash -c 'poetry remove file-work && poetry add ./file-work'"
reinstall-log = "bash -c 'poetry remove log-manager && poetry add ./log-manager'"
reinstall-all = "bash -c 'poetry remove file-work log-manager && poetry add ./file-work ./log-manager'"